kafka-java-vertz-starter/app-deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    version: 10.4.0
    name: es-demo
  name: es-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      name: es-demo
      version: 10.4.0
  template:
    metadata:
      labels:
        version: 10.4.0
        name: es-demo
    spec:
      containers:
        - name: es-demo
          image: quay.io/ibmcase/es-demo
          imagePullPolicy: Always
          args:
            -  -Dproperties_path=/deployments/cfg/kafka.properties
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          volumeMounts:
            - mountPath: /deployments/cfg/kafka.properties
              name: properties
              readOnly: true
              subPath: ""
            - mountPath: /deployments/certs
              name: kafka-cert
              readOnly: true
              subPath: ""
      volumes:
      - name: properties
        secret:
          secretName: demo-app-secret
          items:
            - key: kafka.properties
              path: kafka.properties
      - name: kafka-cert
        secret:
          optional: true
          secretName: truststore-cert
          items:  
            - key: truststore.p12
              path: truststore.p12
