kafka-java-vertz-starter/app-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: es-demo
  name: es-demo
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    name: es-demo
  type: ClusterIP
